--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,5 +1,5 @@
 <!-- Louvado seja o Senhor -->
 
-<button (click)="runFunc()" [type]="type">
+<button (click)="emitClick()" [type]="type">
     <ng-content/>
 </button>
