--- a/src/app/pages/vendas/modal-registro-devedores/modal-registro-devedores.component.html
+++ b/src/app/pages/vendas/modal-registro-devedores/modal-registro-devedores.component.html
@@ -1,23 +1,23 @@
 <!-- Louvado seja o Senhor -->
 
 <app-modal [(isOpen)]="isRegistroDevedoresOpen" width="55vw">
-    <h1 modal-title>Registro dos Devedores</h1>
+    <h1 modal-title>Registro dos Clientes</h1>
     <i class="ph ph-money-wavy icon" modal-icon></i>
 
     <section class="table-section" modal-content>
         <app-table width="40vw" btnDisplay="none">
             <tr table-header>
-                <th>Nome do Devedor</th>
+                <th>Nome do Cliente</th>
                 <th>Valor da Dívida</th>
                 <th>Ações</th>
             </tr>
 
-            <tr table-data>
-                <td>asd</td>
-                <td>132</td>
+            <tr table-data *ngFor="let cliente of clientes">
+                <td>{{ cliente.clienteNome }}</td>
+                <td>{{ cliente.clienteDivida }}</td>
                 <td>
-                    <app-button>
-                        Acessar registro do devedor
+                    <app-button (clicked)="loadClienteInfo(cliente.clienteID)">
+                        Acessar registro do cliente
                     </app-button>
                 </td>
             </tr>
