style: estilização geral do sistema

--- a/src/app/pages/vendas/modal-delete-venda/modal-delete-venda.component.html
+++ b/src/app/pages/vendas/modal-delete-venda/modal-delete-venda.component.html
@@ -1,7 +1,7 @@
 <!-- Louvado seja o Senhor -->
 
-<app-modal [(isOpen)]="isDeleteVendaModalOpen" width="50vw" height="50vh" class="modal">
-    <h1 modal-title>Excluir Registro de Venda</h1>
+<app-modal [(isOpen)]="isDeleteVendaModalOpen" width="40vw" height="30vh" class="modal">
+    <h1 modal-title>Excluir registro de venda</h1>
 
     <i class="ph ph-trash-simple icon" modal-icon></i>
 
