--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,14 @@
 <!-- Louvado seja o Senhor -->
 
-<nav>
-    <i class="ph ph-user"></i>
-    <div>
-        <ul>
-            <a href="/home">Home</a>
-            <a href="/vendas">Vendas</a>
-            <a href="/estoque">Estoque</a>
-            <a href="/registroDevedores">Registro de Devedores</a>
-        </ul>
-    </div>
-    <i class="ph ph-sign-out"></i>
+<nav class="navbar">
+  <i class="ph ph-user user-icon"></i>
+
+  <ul class="nav-links">
+    <li><a href="/home">Home</a></li>
+    <li><a href="/vendas">Vendas</a></li>
+    <li><a href="/estoque">Estoque</a></li>
+    <li><a href="/registroDevedores">Registro de Devedores</a></li>
+  </ul>
+
+  <i class="ph ph-sign-out logout-icon"></i>
 </nav>
