--- a/src/app/shared/table/table.component.html
+++ b/src/app/shared/table/table.component.html
@@ -7,12 +7,12 @@
         </app-button>
 
         <div class="filters-div">
-            <label for="search">
-                <input type="text" name="search" id="search">
+            <label for="search" class="search-wrapper">
                 <i class="ph ph-magnifying-glass"></i>
+                <input type="search" name="search" id="search" placeholder="Pesquisar...">
             </label>
-            
-            <i class="ph ph-funnel"></i>
+
+            <i class="ph ph-funnel filter-icon"></i>
         </div>
     </div>
 
