--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -36,3 +36,17 @@ main{
     display: flex;
     justify-content: flex-end;
 }
+
+.delete-div{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+    padding: 1.5rem 0;
+}
+
+.delete-buttons-div{
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+}
