--- a/src/app/pages/registro-devedores/modal-delete-pagamento/modal-delete-pagamento.component.css
+++ b/src/app/pages/registro-devedores/modal-delete-pagamento/modal-delete-pagamento.component.css
@@ -1,1 +1,15 @@
 /* Louvado seja o Senhor */
+
+.delete-div{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+    padding: 1.5rem 0;
+}
+
+.delete-buttons-div{
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+}
