--- a/src/app/shared/button/button.component.css
+++ b/src/app/shared/button/button.component.css
@@ -1,15 +1,16 @@
 /* Louvado seja o Senhor */
 
-button{
-    background-color: var(--tertiary-color);
-    padding: 0.65rem;
-    border: none;
-    border-radius: 4px;
-    color: var(--primary-color);
-    font-size: 1rem;
+button {
+  background: linear-gradient(90deg, #38B75A, #2FAE55);
+  border: none;
+  color: var(--primary-color);
+  padding: 12px 24px;
+  border-radius: 10px;
+  font-weight: bold;
+  transition: .3s;
 }
 
-button:hover{
-    background-color: var(--highlight-color);
-    cursor: pointer;
+button:hover {
+  filter: brightness(1.1);
+  transform: translateY(-2px);
 }
