--- a/src/app/shared/input/input.component.css
+++ b/src/app/shared/input/input.component.css
@@ -17,8 +17,14 @@ input{
     width: 100%;
     height: 100%;
     padding: 0.125rem 0.5rem;
-    border: none;
+    border: 1px solid #38B75A;
     border-radius: 4px;
     font-size: 0.915rem;
+    transition: .3s;
+}
+
+input:focus {
+  border-color: #2FAE55;
+  box-shadow: 0 0 0 3px rgba(47, 174, 85, 0.2);
 }
 
