--- a/src/app/pages/registro-devedores/registro-devedores.component.html
+++ b/src/app/pages/registro-devedores/registro-devedores.component.html
@@ -11,7 +11,7 @@
     <app-header/>
 
     <main>
-        <section class="info-section">
+        <section class="info-section" [style.display]="infoSectionDisplay">
             <div class="info-data-div">
                 <h1>Nome: {{ nomeCliente }}</h1>
                 
