--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -6,9 +6,19 @@ body{
     gap: 4rem;
 }
 
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    gap: 4rem;
+}
+
 .card-section{
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
 }
 
 .card .ph{
@@ -18,4 +28,11 @@ body{
 .card-title p{
     font-size: 2.5rem;
     text-align: center;
+}
+
+.home-carousel-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
