--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,16 +8,45 @@ body{
 
 main{
     display: flex;
-    flex-direction: column;
     align-items: center;
     width: 100%;
     height: 100%;
     gap: 4rem;
 }
 
+.manual-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    font-family: 'Inter', sans-serif;
+}
+
+.manual-section div{
+    width: 50%;
+    height: 80%;
+    background-color: var(--secondary-table-row-color);
+    border-radius: 8px;
+    border: 1px solid var(--highlight-color);
+    padding: 2rem;
+}
+
+.manual-section ul li{
+    margin-bottom: 0.75rem;
+    text-align: justify;
+    list-style-type: none;
+}
+
+.card-container{
+    width: 50%;
+}
+
 .card-section{
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
+    gap: 4rem;
     width: 100%;
 }
 
