feat: authGuard funcional

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,5 +10,5 @@
     <li><a href="/registroDevedores">Registro de Devedores</a></li>
   </ul>
 
-  <i class="ph ph-sign-out logout-icon"></i>
+  <i class="ph ph-sign-out logout-icon" (click)="logout()" ></i>
 </nav>
