Patch Notes style: adição de títulos nas tabelas feat: carregando ID do cliente via tabela em vendas

--- a/src/app/pages/estoque/estoque.component.css
+++ b/src/app/pages/estoque/estoque.component.css
@@ -12,6 +12,11 @@ main{
     align-items: center;
 }
 
+.prod-table-div h2{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 .table-actions-div{
     font-size: 1.125rem;
 }
