--- a/src/app/pages/estoque/estoque.component.html
+++ b/src/app/pages/estoque/estoque.component.html
@@ -11,7 +11,8 @@
     <app-header/>
 
     <main>
-        <div class="prod-table-div">        
+        <div class="prod-table-div"> 
+            <h2>Tabela de Produtos</h2>       
             <app-table class="table" width="90vw" [clickFunc]="openAddModal" overflowHeight="70vh">
                 <p btn-text>Adicionar Produto</p>
 
