--- a/src/app/pages/vendas/vendas.component.css
+++ b/src/app/pages/vendas/vendas.component.css
@@ -11,6 +11,11 @@ body{
     justify-content: space-evenly;
 }
 
+.table-title{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 .table-actions-div{
     font-size: 1.125rem;
 }
