--- a/src/app/pages/vendas/vendas.component.html
+++ b/src/app/pages/vendas/vendas.component.html
@@ -12,47 +12,53 @@
 
     <main>
         <section class="tables-section">
-            <app-table width="40vw" [clickFunc]="openNovaVendaModal" >
-                <p btn-text>Adicionar registro de venda</p>
+            <div>
+                <h2 class="table-title">Tabela das Vendas</h2>
+                <app-table width="40vw" [clickFunc]="openNovaVendaModal" >
+                    <p btn-text>Adicionar registro de venda</p>
 
-                <tr table-header>
-                    <th>Valor da compra</th>
-                    <th>Tipo da compra</th>
-                    <th>Data da venda</th>
-                    <th>Ações</th>
-                </tr>
+                    <tr table-header>
+                        <th>Valor da compra</th>
+                        <th>Tipo da compra</th>
+                        <th>Data da venda</th>
+                        <th>Ações</th>
+                    </tr>
 
-                <tr table-data *ngFor="let venda of vendas">
-                    <td>{{ venda.vendaValor | currency: "BRL" }}</td>
-                    <td>{{ venda.tipoCompra | tipoCompra }}</td>
-                    <td>{{ venda.vendaDataRegistro | date: "dd/MM/yyyy" }}</td>
-                    <td class="table-actions-div">
-                        <i class="ph ph-pencil-simple" (click)="openEditVendaModal(venda.vendaID)"></i>
-                        <i class="ph ph-trash-simple" (click)="openDeleteVendaModal(venda.vendaID)"></i>
-                    </td>                    
-                </tr>
-            </app-table>
+                    <tr table-data *ngFor="let venda of vendas">
+                        <td>{{ venda.vendaValor | currency: "BRL" }}</td>
+                        <td>{{ venda.tipoCompra | tipoCompra }}</td>
+                        <td>{{ venda.vendaDataRegistro | date: "dd/MM/yyyy" }}</td>
+                        <td class="table-actions-div">
+                            <i class="ph ph-pencil-simple" (click)="openEditVendaModal(venda.vendaID)"></i>
+                            <i class="ph ph-trash-simple" (click)="openDeleteVendaModal(venda.vendaID)"></i>
+                        </td>                    
+                    </tr>
+                </app-table>
+            </div>
             
-            <app-table width="40vw" [clickFunc]="openDevedoresModal">
-                <p btn-text>Ver lista de clientes</p>
-
-                <tr table-header>
-                    <th>Nome do devedor</th>
-                    <th>Valor da dívida</th>
-                    <th>Data da dívida</th>
-                    <th>Ações</th>
-                </tr>
-
-                <tr table-data *ngFor="let divida of dividas">
-                    <td>{{ divida.nomeComprador }}</td>
-                    <td>{{ divida.vendaValor | currency: "BRL" }}</td>
-                    <td>{{ divida.vendaDataRegistro | date: "dd/MM/yyyy"}}</td>
-                    <td class="table-actions-div">
-                        <i class="ph ph-pencil-simple" (click)="openEditFiadoModal(divida.vendaID)"></i>
-                        <i class="ph ph-trash-simple" (click)="openDeleteFiadoModal(divida.vendaID)"></i>
-                    </td>
-                </tr>
-            </app-table>
+            <div>
+                <h2 class="table-title">Tabela das Dívidas</h2>
+                <app-table width="40vw" [clickFunc]="openDevedoresModal">
+                    <p btn-text>Ver lista de clientes</p>
+                    
+                    <tr table-header>
+                        <th>Nome do devedor</th>
+                        <th>Valor da dívida</th>
+                        <th>Data da dívida</th>
+                        <th>Ações</th>
+                    </tr>
+                    
+                    <tr table-data *ngFor="let divida of dividas">
+                        <td>{{ divida.nomeComprador }}</td>
+                        <td>{{ divida.vendaValor | currency: "BRL" }}</td>
+                        <td>{{ divida.vendaDataRegistro | date: "dd/MM/yyyy"}}</td>
+                        <td class="table-actions-div">
+                            <i class="ph ph-pencil-simple" (click)="openEditFiadoModal(divida.vendaID)"></i>
+                            <i class="ph ph-trash-simple" (click)="openDeleteFiadoModal(divida.vendaID)"></i>
+                        </td>
+                    </tr>
+                </app-table>
+            </div>
         </section>
     </main>
 
