--- a/src/app/pages/registro-devedores/registro-devedores.component.css
+++ b/src/app/pages/registro-devedores/registro-devedores.component.css
@@ -42,6 +42,11 @@ body{
     margin-right: 1rem;
 }
 
+.table-title{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 .devedores-table-section{
     display: flex;
     flex-direction: column;
