--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -10,6 +10,10 @@ main{
     background-color: var(--primary-color);
     width: 50%;
     height: 100%;
+    background-image: url("../../../../public/img/JPS-logo.png");
+    background-size: 75%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .form-section{
